Fix multiplier text vertical alignment

--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -35,7 +35,7 @@ main {
 
 .board-square:after {
     display: inline-block;
-    padding: 7px 0;
+    padding: 6px 0;
     line-height: 10px;
     font-size: 6px;
     color: #444;
